--- a/index.html
+++ b/index.html
@@ -4,22 +4,6 @@
     <meta charset="UTF-8">
     <title>ALTP</title>
     <style>
-        #wrapper {
-            border: 1px solid black;
-            width: 500px;
-            height: 600px;
-        }
-        .hide {
-            display: none;
-        }
-
-        #startBtn {
-            border: none;
-            padding: 10px 30px;
-            border-radius: 3px;
-            display: block;
-            margin: 100px auto;
-        }
         #question {
             margin-top: 100px;
             width: 80px;
@@ -44,22 +28,22 @@
     </style>
 </head>
 <body>
-<div id="wrapper">
-    <div id="welcomeScreen" class="hide">
-        <buttton id="startBtn">Start</buttton>
-    </div>
-    <div id="questionScreen" class="hide">
-        <div id="question">Cau hoi</div>
-        <div id="answer">
-            <div id="answer_1">Cau tra loi 1</div>
-            <div id="answer_2">Cau tra loi 2</div>
-            <div id="answer_3">Cau tra loi 3</div>
-            <div id="answer_4">Cau tra loi 4</div>
-        </div>
+<div id="questionScreen" class="show">
+    <div id="current">Cau so </div>
+    <div id="prize">So tien thuong: </div>
+    <div id="question">Cau hoi</div>
+    <div id="answer">
+        <div id="answer_1">Cau tra loi 1</div>
+        <div id="answer_2">Cau tra loi 2</div>
+        <div id="answer_3">Cau tra loi 3</div>
+        <div id="answer_4">Cau tra loi 4</div>
     </div>
 </div>
+<button onclick="next()">Next</button>
 
 </body>
-<script src="js/ui.js"></script>
-<script src="js/js.js"></script>
+
+
+<script src="js/Quiz.js"></script>
+<script src="js/game.js"></script>
 </html>
